Replace usage of Consultee priv (#74)
* Replace usage of Consultee priv

* Fix tests

* Remove all usages of PWA_CONSULTEE